# adventofcode

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  setup_day.sh
.cargo/: config.toml
.github/workflows/: bump-version.yml
1/: run.py
aoc/: init_day.py  setup_day.py  submit.py  utils.py
data/examples/: 03-2.txt
data/puzzles/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md
day00/: day00.py
day01/: day01.py  day01_test.py
day02/: day02.py  day02_part1.py  day02_part2.py  day02_test.py  utils.py
day03/: day03.py  day03_test.py
day04/: day04.py  day04_test.py  utils.py
day05/: day05.py  day05_test.py  utils.py
day06/: day06.py  day06_test.py  utils.py
day07/: day07.py  day07_test.py
day08/: day08.py  day08_test.py  utils.py
day09/: day09.py  day09_test.py  utils.py
day10/: day10.py  day10_test.py
day11/: day11.py  day11_test.py
day12/: day12.py  day12_test.py  utils.py
day13/: day13.py  day13_test.py  utils.py
day14/: day14.py  day14_test.py  utils.py
day15/: day15.py
day16/: day16.py
day17/: day17.py
day18/: day18.py
day19/: day19.py
day2/: day2_part1.py  day2_part2.py
day20/: day20.py
day21/: day21.py
day22/: day22.py
day23/: day23.py
day24/: day24.py
day25/: day25.py
src/: lib.rs  main.rs  template.txt
src/template/: aoc_cli.rs  day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/commands/: download.rs  scaffold.rs  solve.rs  time.rs
