[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Jason Kai <21226986+kaitj@users.noreply.github.com>"]
edition = "2021"
default-run = "adventofcode"
publish = false

[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution deps
regex = "1.11.1"
itertools = "0.13.0"
cached = "0.54.0"
