[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "\"Programming puzzles completed with Python 3.10 for advent of code 2022\""
authors = ["Jason Kai <tkai@uwo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0"
pytest-console-scripts = "1.2"
pytest = "^7.0.1"
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
poethepoet = "^0.13.1"
pre-commit = "^2.17.0"
yamlfix = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
setup = "pre-commit install"
isort = "isort ./*.py"
black = "black ."
flake8 = "flake8 ."
yamlfix = { shell = "find . -type f \\( -iname \\*.yaml -o -iname \\*.yml \\) -exec yamlfix {} \\;" }
quality = ["yamlfix", "isort", "black", "flake8"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 79

[tool.flake8]
ignore = 'E501'
