[tool.poetry]
name = "adventofcode"
version = "2023.12.11"
description = "Programming puzzles complete in Python for AoC."
authors = ["Jason Kai <tkai@uwo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
isort = ">=5.10.1"
pre-commit = ">=2.17.0"
pyright = "^1.1.334"
ruff = ">=0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = false
