[tool.poetry]
name = "adventofcode"
version = "2023.12.20"
description = "Programming puzzles complete in Python for AoC."
authors = ["Jason Kai <tkai@uwo.ca>"]
readme = "README.md"
packages = [{ include = "aoc" }]

[tool.poetry.scripts]
init_day = "aoc.init_day:init_day"
submit = "aoc.submit:submit_solution"

[tool.poetry.dependencies]
python = ">=3.8"
pytest = ">=7.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.17.0"
pyright = ">=1.1.334"
ruff = ">=0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
exclude = ["day00"]
select = ["E", "W", "N", "RUF", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = false
exclude = ["day00"]
